[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/game_over.gd" type="Script" id=1]
[ext_resource path="res://scenes/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/hook.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/bite.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/underwater_ambiance.ogg" type="AudioStream" id=5]

[node name="game_over" type="Node2D"]
script = ExtResource( 1 )

[node name="background" parent="." instance=ExtResource( 2 )]

[node name="hook" parent="." instance=ExtResource( 3 )]

[node name="game_over_message" type="Label" parent="."]
margin_left = 262.167
margin_top = 361.0
margin_right = 735.167
margin_bottom = 409.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "That's just some fish, dude.
We're here for the treasure!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_again" type="Button" parent="."]
margin_left = 454.51
margin_top = 423.785
margin_right = 535.51
margin_bottom = 443.785
text = "Play Again!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bite_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -2.0
autoplay = true
[connection signal="pressed" from="play_again" to="." method="_on_play_again_pressed"]
